--- a/views/board.erb
+++ b/views/board.erb
@@ -3,19 +3,19 @@
   <div id="board">
     <table>
       <tr id="row1">
-        <td class="square t l"></td>
-        <td class="square t m"></td>
-        <td class="square t r"></td>
+        <td class="square t l"><input class = "bu"type="button" value=""></td>
+        <td class="square t m"><input class = "bu"type="button" value=""></td>
+        <td class="square t r"><input class = "bu"type="button" value=""></td>
       </tr>
       <tr id="row2">
-        <td class="square m l"></td>
-        <td class="square m m"></td>
-        <td class="square m r"></td>
+        <td class="square m l"><input class = "bu"type="button" value=""></td>
+        <td class="square m m"><input class = "bu"type="button" value=""></td>
+        <td class="square m r"><input class = "bu"type="button" value=""></td>
       </tr>
       <tr id="row3">
-        <td class="square b l"></td>
-        <td class="square b m"></td>
-        <td class="square b r"></td>
+        <td class="square b l"><input class = "bu"type="button" value=""></td>
+        <td class="square b m"><input class = "bu"type="button" value=""></td>
+        <td class="square b r"><input class = "bu"type="button" value=""></td>
       </tr>
     </table>
   </div>
