Added example text!!

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -13,6 +13,8 @@
     border-style: hidden;
     background: transparent;
     border: none !important;
+    font-size:xx-large;
+    font-weight:bolder;
     }
 .l{
     border-left:0px solid #000;
