--- a/views/board.erb
+++ b/views/board.erb
@@ -8,14 +8,14 @@
         <td class="square t r"><input class = "bu"type="button" value=""></td>
       </tr>
       <tr id="row2">
-        <td class="square m l"><input class = "bu"type="button" value=""></td>
+        <td class="square m l"><input class = "bu"type="button" value="O"></td>
         <td class="square m m"><input class = "bu"type="button" value=""></td>
         <td class="square m r"><input class = "bu"type="button" value=""></td>
       </tr>
       <tr id="row3">
-        <td class="square b l"><input class = "bu"type="button" value=""></td>
-        <td class="square b m"><input class = "bu"type="button" value=""></td>
-        <td class="square b r"><input class = "bu"type="button" value=""></td>
+        <td class="square b l"><input class = "bu"type="button" value="O"></td>
+        <td class="square b m"><input class = "bu"type="button" value="X"></td>
+        <td class="square b r"><input class = "bu"type="button" value="X"></td>
       </tr>
     </table>
   </div>
