Removed redirect using image.erb instead

--- a/views/image.erb
+++ b/views/image.erb
@@ -6,6 +6,6 @@
     </title>
   </head>
   <body>
-   <img src="/images/twitter.gif" alt="twitter" height="504" width="324">
+   <img src="/images/twitter.gif" alt="Twitter" height="324" width="504"/>
   </body>
 </html>
