Borders removed on edges, whether 3x3 or 4x4

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -16,3 +16,20 @@
     font-size:xx-large;
     font-weight:bolder;
 }
+
+.r0 {
+    border-top:0px solid #000;
+}
+
+.c0 {
+    border-left:0px solid #000;
+}
+
+.rl {
+    border-bottom:0px solid #000;
+}
+
+.cl {
+    border-right:0px solid #000;
+
+}
