Working better, but index remains -1?

--- a/views/image.html
+++ b/views/image.html
@@ -4,7 +4,19 @@
       Funny Picture!
     </title>
   </head>
+  <div>
   <body>
    <img src="/images/twitter.gif" alt="Twitter" height="324" width="504"/>
   </body>
+  </div>
+  <div>
+  <body>
+  <img src="/images/cafeteria.gif" alt="Cafeteria" height="323" width="265"/>  
+    </body>
+  </div>
+    <div>
+  <body>
+  <img src="/images/work.png" alt="Work"/>  
+    </body>
+  </div>
 </html>
