--- a/views/board.erb
+++ b/views/board.erb
@@ -1,6 +1,6 @@
 <html>
 <link rel="stylesheet" href="/css/application.css">
-<head></head>
+<head>WELCOME</head>
 <body>
   <%= BoardPresenter.make_board(board) %>
   </body>
