Updated Sinatra_app, working 4x4 (even diagonals)

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,5 +3,6 @@
 <head><img src="/images/welcome.gif" alt="Welcome!!" align="center"/></head>
 <body>
 <%= OptionPresenter.make_options({"board_size" => [3, 4]}) %>
+<%= MessagePresenter.get_games_completed %>
 </body>
 </html>
